--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ a {
 }
 
 a:hover {
-    transform: scale(1.4); /* Zoom-in effect */
+    transform: scale(1.1); /* Zoom-in effect */
     color: #e35f92;; /* Change text color on hover */
 }
 
@@ -497,6 +497,7 @@ button {
 
   .btnDown1:hover {
     background-color:palevioletred;
+    color: white;
   }
 
 
