--- a/styles.css
+++ b/styles.css
@@ -655,6 +655,7 @@ button {
     height: 500px;
     overflow-y: auto;
     border: 1px solid #ccc;
+    margin-bottom: 3vh;
   }
 
   .scroll-box img {
