--- a/styles.css
+++ b/styles.css
@@ -493,14 +493,15 @@ button {
     background-color:#009485;; /* Green */
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 8px 16px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     border-radius:30px;
-    margin-left: 43%;
+    margin-left: 44%;
     margin-right: auto;
+    cursor: pointer;
   }
 
 
